app-p3-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-p3
  namespace: dev
spec:
  selector:
    app: app-p3
  ports:
    - protocol: TCP
      port: 8888
      targetPort: 8888
  type: LoadBalancer
